updated the site-name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,10 @@
 site_name: "Amarjit Dhillon's Blog"
 site_description: 'A persanal blog of Amarjit Singh Dhillon'
 site_author: 'Amarjit Singh Dhillon'
-site_url: 'https://www.amarjitdhillon.com'
+site_url: 'https://www.asdhillon.com'
 
 # Repository
-repo_name: 'odd-snail/www.amarjitdhillon.com'
+repo_name: 'odd-snail/www.asdhillon.com'
 # repo_url: 'https://github.com/odd-snail/www.amarjitdhillon.com'
 
 # Copyright
