--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/amarylyq/public_html/
-    - /bin/cp -R site $DEPLOYPATH
-
+    - /bin/rm -Rf $DEPLOYPATH
+    - /bin/mkdir $DEPLOYPATH
+    - /bin/cp -R site/ $DEPLOYPATH
