--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,4 +4,4 @@ deployment:
     - export DEPLOYPATH=/home/amarylyq/public_html/
     - /bin/rm -Rf $DEPLOYPATH
     - /bin/mkdir $DEPLOYPATH
-    - /bin/cp -R site/ $DEPLOYPATH
+    - /bin/cp -R site/* $DEPLOYPATH
