added a panner butter masala receipe

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,9 +103,9 @@ nav:
 
   - "Life-Hacks": 
     - "Covid-19 preparedness": "blogs/covidPrep.md"
-    - "Poems": "blogs/changaN.md"
 
-
+  - "Food": 
+      - "Paneer butter masala": "blogs/PaneerButter.md"
 
 
 
